--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -6,7 +6,7 @@ dataSources:
     name: LiquidityPool
     network: {{network}}
     source:
-      address: "{{address}}"
+      address: "{{liquidityPoolContractAddress}}"
       abi: LiquidityPool
       startBlock: {{startBlock}}
     mapping:
@@ -57,9 +57,9 @@ dataSources:
       file: ./src/mapping.ts
   - kind: ethereum
     name: LiquidityProviders
-    network: goerli
+    network: {{network}}
     source:
-      address: "0xE0875Ee87aD154Ec7C0a2e8957B5476c1bece495"
+      address: "{{liquidityProvidersContractAddress}}"
       abi: LiquidityProviders
       startBlock: 6432173
     mapping:
