--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -30,8 +30,8 @@ dataSources:
         - name: LiquidityPool
           file: ./abis/LiquidityPool.json
       eventHandlers:
-        # - event: AssetSent(indexed address,indexed uint256,indexed uint256,address,bytes,uint256)
-        # handler: handleAssetSent
+        - event: AssetSent(indexed address,indexed uint256,indexed uint256,address,bytes,uint256)
+          handler: handleAssetSent
         - event: Deposit(indexed address,indexed address,indexed address,uint256,uint256,uint256,string)
           handler: handleDeposit
         # - event: EthReceived(address,uint256)
