--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy:bsc":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-bsc",
     "deploy:optimism":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-optimism",
     "deploy:arbitrum":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-arbitrum",
+    "deploy:fantom":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-fantom",
     "create-local": "graph create --node http://localhost:8020/ shantanu-bico/hyphen-v2-liquidity-pool",
     "remove-local": "graph remove --node http://localhost:8020/ shantanu-bico/hyphen-v2-liquidity-pool",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 shantanu-bico/hyphen-v2-liquidity-pool",
@@ -24,7 +25,9 @@
     "prepare:avalanche": "mustache config/avalanche-mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:bsc":"mustache config/bsc-mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:optimism":"mustache config/optimism-mainnet.json subgraph.template.yaml > subgraph.yaml",
-    "prepare:arbitrum":"mustache config/arbitrum-mainnet.json subgraph.template.yaml > subgraph.yaml"
+    "prepare:arbitrum":"mustache config/arbitrum-mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:fantom":"mustache config/fantom-mainnet.json subgraph.template.yaml > subgraph.yaml"
+
 
   },
   "dependencies": {
