--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:optimism":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-optimism",
     "deploy:optimism-kovan":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-optimism-kovan",
     "deploy:arbitrum":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-arbitrum",
+    "deploy:arbitrum-rinkeby":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-arbitrum-rinkeby",
     "deploy:fantom":  "graph deploy --node https://api.thegraph.com/deploy/ shantanu-bico/hyphenv2-liquidity-pool-fantom",
     "create-local": "graph create --node http://localhost:8020/ shantanu-bico/hyphen-v2-liquidity-pool",
     "remove-local": "graph remove --node http://localhost:8020/ shantanu-bico/hyphen-v2-liquidity-pool",
@@ -28,6 +29,7 @@
     "prepare:optimism":"mustache config/optimism-mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:optimism-kovan":"mustache config/optimism-kovan.json subgraph.template.yaml > subgraph.yaml",
     "prepare:arbitrum":"mustache config/arbitrum-mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:arbitrum-rinkeby":"mustache config/arbitrum-rinkeby.json subgraph.template.yaml > subgraph.yaml",
     "prepare:fantom":"mustache config/fantom-mainnet.json subgraph.template.yaml > subgraph.yaml"
 
 
